[gd_scene load_steps=4 format=3 uid="uid://b6xyn6cwumj60"]

[ext_resource type="Script" path="res://Scenes/campaign/scripts/TravelPhase.gd" id="1_i7w7c"]
[ext_resource type="Theme" uid="uid://d1you1rrwuu48" path="res://Scenes/sci_fi_theme.tres" id="2_cwhs3"]
[ext_resource type="Script" path="res://Scripts/Locations/StarshipTravelEvents.gd" id="3_stev"]

[node name="Travel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cwhs3")
script = ExtResource("1_i7w7c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Upkeep" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="UpkeepLabel" type="Label" parent="VBoxContainer/TabContainer/Upkeep"]
layout_mode = 2
text = "Upkeep Phase"

[node name="UpkeepDetails" type="VBoxContainer" parent="VBoxContainer/TabContainer/Upkeep"]
layout_mode = 2

[node name="UpkeepButton" type="Button" parent="VBoxContainer/TabContainer/Upkeep"]
layout_mode = 2
text = "Perform Upkeep"

[node name="Travel" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="TravelLabel" type="Label" parent="VBoxContainer/TabContainer/Travel"]
layout_mode = 2
text = "Travel Phase"

[node name="TravelOptions" type="VBoxContainer" parent="VBoxContainer/TabContainer/Travel"]
layout_mode = 2

[node name="StayButton" type="Button" parent="VBoxContainer/TabContainer/Travel/TravelOptions"]
layout_mode = 2
text = "Stay in Current Location"

[node name="TravelButton" type="Button" parent="VBoxContainer/TabContainer/Travel/TravelOptions"]
layout_mode = 2
text = "Travel to New Location"

[node name="TravelEventDetails" type="VBoxContainer" parent="VBoxContainer/TabContainer/Travel"]
layout_mode = 2

[node name="NextEventButton" type="Button" parent="VBoxContainer/TabContainer/Travel"]
layout_mode = 2
text = "Generate Next Event"

[node name="Patrons" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="PatronsLabel" type="Label" parent="VBoxContainer/TabContainer/Patrons"]
layout_mode = 2
text = "Patrons Phase"

[node name="PatronsList" type="VBoxContainer" parent="VBoxContainer/TabContainer/Patrons"]
layout_mode = 2

[node name="CheckPatronsButton" type="Button" parent="VBoxContainer/TabContainer/Patrons"]
layout_mode = 2
text = "Check for Patrons"

[node name="Mission" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MissionLabel" type="Label" parent="VBoxContainer/TabContainer/Mission"]
layout_mode = 2
text = "Mission Phase"

[node name="MissionDetails" type="VBoxContainer" parent="VBoxContainer/TabContainer/Mission"]
layout_mode = 2

[node name="StartMissionButton" type="Button" parent="VBoxContainer/TabContainer/Mission"]
layout_mode = 2
text = "Start Mission"

[node name="LogBook" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Dashboard"

[node name="StarshipTravelEvents" type="Node" parent="."]
script = ExtResource("3_stev")

[connection signal="pressed" from="VBoxContainer/TabContainer/Upkeep/UpkeepButton" to="." method="_on_upkeep_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Travel/TravelOptions/StayButton" to="." method="_on_stay_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Travel/TravelOptions/TravelButton" to="." method="_on_travel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Travel/NextEventButton" to="." method="_on_next_event_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Patrons/CheckPatronsButton" to="." method="_on_check_patrons_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Mission/StartMissionButton" to="." method="_on_start_mission_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
